--- a/ModuleBProject.Web/Views/_ViewImports.cshtml
+++ b/ModuleBProject.Web/Views/_ViewImports.cshtml
@@ -7,6 +7,7 @@
 @using EPiServer.Web.Mvc
 @using EPiServer.Web.Routing
 @using ModuleBProject.Web.Models.Pages
+@using ModuleBProject.Web.Models.Media
 @using Microsoft.AspNetCore.Mvc.Razor
 @using Microsoft.AspNetCore.Html
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
